<resources>
    <string name="app_name">掌上教务处</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="loginText">登录</string>
    <string name="wait">请稍后</string>
    <string name="home">主页</string>
    <string name="class_schedule">课程表</string>
    <string name="exam">考试</string>
    <string name="grade">成绩</string>
    <string name="main_exam_recently">近期考试</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
</resources>
