<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ClassScheduleFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:spinnerMode="dropdown" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:entries="@array/week"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/class_schedule_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="8"
                android:rowCount="14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Monday"
                    android:layout_column="1"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Tuesday"
                    android:layout_column="2"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Wednesday"
                    android:layout_column="3"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Thursday"
                    android:layout_column="4"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Friday"
                    android:layout_column="5"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Saturday"
                    android:layout_column="6"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Sunday"
                    android:layout_column="7"
                    android:layout_columnWeight="2"
                    android:layout_row="0"
                    android:layout_rowWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/one"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="1"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/two"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="2"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/three"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="3"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/four"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="4"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/five"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="5"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/six"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="6"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/seven"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="7"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/eight"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="8"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/nine"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="9"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/ten"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="10"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/eleven"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="11"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/twelve"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="12"
                    android:layout_rowWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/thirteen"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="13"
                    android:layout_rowWeight="2" />
            </GridLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>